Changed some dashboard styles

--- a/angular-templates/register.html
+++ b/angular-templates/register.html
@@ -1,1 +1,1 @@
-<form><h1>Register</h1></form>
+<!-- Templates use an empty layout--><form ng-submit="registerUser()" class="pure-form"><input type="text" autofocus="autofocus" placeholder="Username" ng-model="user.username" required="required"/><input type="email" placeholder="Email address" ng-model="user.email" required="required"/><input type="password" placeholder="Password" ng-model="user.password" required="required"/><input type="submit" value="Register" class="pure-button pure-button-primary"/></form>
