--- a/angular-templates/home.html
+++ b/angular-templates/home.html
@@ -1,1 +1,1 @@
-<!-- Templates use an empty layout--><a href="/#/register" class="pure-button pure-button-primary">New Account</a>
+<!-- Templates use an empty layout--><div class="content"><h1>Play Elasticity</h1><a href="/#/dashboard" class="pure-button pure-button-primary">Start</a></div>
