Added credit card to show that its currency

--- a/dashboard-components/marketplace.html
+++ b/dashboard-components/marketplace.html
@@ -3,5 +3,5 @@
   <div class="item" ng-repeat="item in items">
     <img ng-src="{{ item.imageUrl || 'http://placehold.it/500x500' }}">
     <h2>{{ item.name}}</h2>
-    <p>{{ item.cost }}</p>
+    <p><i class="icon ion-card"></i> {{ item.cost }}</p>
 </div>
