--- a/dashboard-components/marketplace.html
+++ b/dashboard-components/marketplace.html
@@ -1,7 +1,7 @@
 <div class="dashboard"><div class="tabs"><a href="/#/dashboard/marketplace" class="pure-button"> <i class="icon ion-ios7-cart"></i>Marketplace</a><a href="/#/dashboard/statistics" class="pure-button"> <i class="icon ion-stats-bars"></i>Statistics</a><a href="/#/dashboard/loans" class="pure-button"> <i class="icon ion-pricetags"></i>Your Loans</a><a href="/#/dashboard/quests" class="pure-button"> <i class="icon ion-calendar"></i>Quests</a></div><h1>Marketplace</h1>
 <div class="items">
   <div class="item" ng-repeat="item in items">
-    <a ng-href="{{ '/#/dashboard/marketplace/' + item.name.toLowerCase() }}">
+    <a ng-href="{{ '/#/dashboard/marketplace/' + item.name.replace(' ', '-').toLowerCase() }}">
     <img ng-src="{{ item.imageUrl || 'http://placehold.it/500x500' }}">
     <h2>{{ item.name}}</h2>
     <p><i class="icon ion-card"></i> {{ item.cost }}</p>
