--- a/dashboard-components/item.html
+++ b/dashboard-components/item.html
@@ -6,5 +6,5 @@
   <p class="item-cost">{{ item.info.cost + ' Credits' }}</p>
   <p class="item-gdp">5% increase in GDP/year</p>
 </div>
-<canvas barchart options="options" data="gdpComparison" width="500" height="300"></canvas>
+// <canvas barchart options="options" data="gdpComparison" width="500" height="300"></canvas>
 </div>
