--- a/dashboard-components/item.html
+++ b/dashboard-components/item.html
@@ -8,6 +8,7 @@
   <p class="item-gdp">{{ item.getGdpIncrease(1) + '% increase in GDP/year' }}</p>
 </div>
 
-<canvas barchart options="options" data="gdpComparison" width="500" height="300"></canvas>
 
+
+</div>
 </div>
