--- a/angular-templates/about.html
+++ b/angular-templates/about.html
@@ -6,3 +6,23 @@ concept called <a href="http://playelasticity.org/">Elasticity</a></p>
 people to donate real money to charity. This prototype shows what
 such a game might look like, but does not involve donating real money.</p>
 <h2>How to Play</h2>
+<p>
+You start the game off with a certain number of credits, which you
+can use to purchase items from the <code>Marketplace</code>. Items
+from the Marketplace are designed to accelerate the growth of your
+village. The items you buy from the Marketplace work in your village
+and give you more credits in return.</p>
+<p>
+Some of the items in the Marketplace give a better return on investment
+than others. Part of the fun is finding the fastest way to make your
+city grow.
+</p>
+<p>
+The items you buy correspond to actual loan categories on <a
+href="http://kiva.org">Kiva</a>. When you "buy" virtual items,
+the game looks up loans on Kiva that you might be interested in.
+</p>
+<p>
+In the future, lending to the developing world would be directly
+integrated into the video game.
+</p>
