--- a/dashboard-components/about.html
+++ b/dashboard-components/about.html
@@ -1,4 +1,4 @@
-<h1>About This Game</h1>
+<div class="dashboard"><div class="tabs"><a href="/#/dashboard/marketplace" class="pure-button"> <i class="icon ion-ios7-cart"></i>Marketplace</a><a href="/#/dashboard/statistics" class="pure-button"> <i class="icon ion-stats-bars"></i>Statistics</a><a href="/#/dashboard/loans" class="pure-button"> <i class="icon ion-pricetags"></i>Your Loans</a><!--a.pure-button(href="/#/dashboard/quests") <i class="icon ion-calendar"></i>Quests--></div><h1>About This Game</h1>
 <p>The game you see here is a <strong>prototype</strong> of a broader
 concept called <a href="http://playelasticity.org/">Elasticity</a></p>
 
@@ -26,3 +26,4 @@ the game looks up loans on Kiva that you might be interested in.
 In the future, lending to the developing world would be directly
 integrated into the video game.
 </p>
+</div>
